feat: add luci interface for rs485 serial port configuration

--- a/feeds/lorawan-gateway/luci-app-lorawan-gateway/root/usr/share/luci/menu.d/luci-app-lorawan-gateway.json
+++ b/feeds/lorawan-gateway/luci-app-lorawan-gateway/root/usr/share/luci/menu.d/luci-app-lorawan-gateway.json
@@ -21,12 +21,12 @@
 			"path": "lorawan-gateway/lora"
 		}
 	},
-	"admin/lorawan-gateway/mqtt": {
-		"title": "MQTT Configuration",
+	"admin/lorawan-gateway/rs485": {
+		"title": "RS485 Configuration",
 		"order": 3,
 		"action": {
 			"type": "view",
-			"path": "lorawan-gateway/mqtt"
+			"path": "lorawan-gateway/rs485"
 		}
 	},
 	"admin/lorawan-gateway/log": {
