--- a/feeds/lorawan-gateway/lorawan-gateway/files/lorawan-gateway.config
+++ b/feeds/lorawan-gateway/lorawan-gateway/files/lorawan-gateway.config
@@ -1,5 +1,7 @@
 config radio 'radio'
-        option enabled '1'
+        option eui ''
+        option channel_plan 'us915_1'
+        option enabled '0'
         option platform 'chirpstack'
 
 config mqtt 'mqtt'
