feat: add cellular configuration support and related scripts

--- a/feeds/lorawan-gateway/lorawan-gateway/files/lorawan-gateway.config
+++ b/feeds/lorawan-gateway/lorawan-gateway/files/lorawan-gateway.config
@@ -33,6 +33,14 @@ config serial 'serial'
         option stopbit '1'
         option checkbit 'none'
 
+config cellular 'cellular'
+	option enabled '1'
+	option apn 'unknow'
+	option username 'unknow'
+	option password 'unknow'
+	option auth 'unknow'
+	option pin 'unknow'
+
 config log 'ui'
         option auto_refresh '1'
         option buffer_limit '2000'
