--- a/feeds/lorawan-gateway/lora/files/basicstation.config
+++ b/feeds/lorawan-gateway/lora/files/basicstation.config
@@ -140,7 +140,7 @@ config station 'station'
 	option idGenIf ''
 	option routerid ''
 	option stationid ''
-	option radioInit '/usr/bin/radio_init.sh'
+	option radioInit '/usr/bin/radio_init'
 	option logFile '/tmp/lora/log'
 	option logLevel ''
 	option logSize ''
