--- a/feeds/lorawan-gateway/luci-app-lora/root/usr/share/luci/menu.d/luci-app-lora.json
+++ b/feeds/lorawan-gateway/luci-app-lora/root/usr/share/luci/menu.d/luci-app-lora.json
@@ -14,9 +14,17 @@
 			"path": "lora/lora"
 		}
 	},
+	"admin/lora/channel": {
+		"title": "Channel Plan",
+		"order": 2,
+		"action": {
+			"type": "view",
+			"path": "lora/channel"
+		}
+	},
 	"admin/lora/log": {
 		"title": "Log",
-		"order": 2,
+		"order": 3,
 		"action": {
 			"type": "view",
 			"path": "lora/log"
