feat:The PackerForwarder protocol no longer uses chirpstack packets, but instead uses sx1302_hal.

--- a/feeds/lorawan-gateway/lora/Makefile
+++ b/feeds/lorawan-gateway/lora/Makefile
@@ -16,7 +16,7 @@ define Package/lora
 	SECTION:=gateway
 	CATEGORY:=Gateway
 	TITLE:=LoRa Configuration
-	DEPENDS:= +chirpstack-concentratord +chirpstack-udp-forwarder-single +basicstation_ubus +libc +libstdcpp
+	DEPENDS:= +basicstation_ubus +lora_pkt_fwd +libc +libstdcpp
 endef
 
 define Package/lora/description
