--- a/feeds/lorawan-gateway/luci-app-rs485/root/usr/share/luci/menu.d/luci-app-rs485.json
+++ b/feeds/lorawan-gateway/luci-app-rs485/root/usr/share/luci/menu.d/luci-app-rs485.json
@@ -22,9 +22,17 @@
 			"path": "rs485/mqtt"
     	}
     },
+	"admin/rs485/protocol": {
+		"title": "Protocol Settings",
+		"order": 3,
+		"action": {
+            "type": "view",
+            "path": "rs485/protocol"
+        }
+    },
 	"admin/rs485/log": {
 		"title": "MQTT Log",
-		"order": 3,
+		"order": 4,
 		"action": {
 			"type": "view",
 			"path": "rs485/log"
