--- a/.config
+++ b/.config
@@ -2092,6 +2092,7 @@ CONFIG_PACKAGE_lora_pkt_fwd=y
 # CONFIG_PACKAGE_lte-serve is not set
 # CONFIG_PACKAGE_multi-wan is not set
 # CONFIG_PACKAGE_quectel-cm is not set
+CONFIG_PACKAGE_rs485-modbus=y
 CONFIG_PACKAGE_rs485-module=y
 CONFIG_PACKAGE_ubus-serve=y
 CONFIG_PACKAGE_ups-module=y
