fix:Fix the compilation failure issue of basicstation_ubus.

--- a/feeds/lorawan-gateway/lora/Makefile
+++ b/feeds/lorawan-gateway/lora/Makefile
@@ -16,7 +16,7 @@ define Package/lora
 	SECTION:=gateway
 	CATEGORY:=Gateway
 	TITLE:=LoRa Configuration
-	DEPENDS:= +basicstation_ubus +lora_pkt_fwd +libc +libstdcpp
+	DEPENDS:=+packetforwarder +basicstation_ubus +libc +libstdcpp
 endef
 
 define Package/lora/description
