--- a/.config
+++ b/.config
@@ -481,6 +481,7 @@ CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
 CONFIG_FEED_chirpstack=y
 CONFIG_FEED_lorawan_gateway=y
+CONFIG_FEED_luci_lorawan_gateway=y
 
 #
 # Base system
@@ -2088,10 +2089,7 @@ CONFIG_PACKAGE_basicstation_ubus=y
 CONFIG_PACKAGE_chirpstack-gateway-bridge=y
 CONFIG_PACKAGE_hardware-info=y
 CONFIG_PACKAGE_lora=y
-# CONFIG_PACKAGE_lte-serve is not set
-# CONFIG_PACKAGE_multi-wan is not set
 CONFIG_PACKAGE_packetforwarder=y
-# CONFIG_PACKAGE_quectel-cm is not set
 CONFIG_PACKAGE_rs485-modbus=y
 CONFIG_PACKAGE_rs485-module=y
 CONFIG_PACKAGE_ubus-serve=y
@@ -4949,7 +4947,6 @@ CONFIG_PACKAGE_luci-mod-system=y
 # CONFIG_PACKAGE_luci-app-banip is not set
 # CONFIG_PACKAGE_luci-app-bcp38 is not set
 # CONFIG_PACKAGE_luci-app-bmx7 is not set
-# CONFIG_PACKAGE_luci-app-cellular is not set
 # CONFIG_PACKAGE_luci-app-chirpstack is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-apps is not set
 CONFIG_PACKAGE_luci-app-chirpstack-chirpstack=y
@@ -6121,7 +6118,6 @@ CONFIG_PACKAGE_cgi-io=y
 # CONFIG_PACKAGE_nginx-ssl-util is not set
 # CONFIG_PACKAGE_nginx-ssl-util-nopcre is not set
 # CONFIG_PACKAGE_privoxy is not set
-# CONFIG_PACKAGE_radicale is not set
 # CONFIG_PACKAGE_radicale2 is not set
 # CONFIG_PACKAGE_radicale2-examples is not set
 # CONFIG_PACKAGE_sockd is not set
@@ -7383,7 +7379,6 @@ CONFIG_PACKAGE_ucode-mod-lua=y
 # CONFIG_PACKAGE_udns-rblcheck is not set
 # CONFIG_PACKAGE_ugps is not set
 # CONFIG_PACKAGE_uhubctl is not set
-# CONFIG_PACKAGE_uledd is not set
 # CONFIG_PACKAGE_unix2dos is not set
 # CONFIG_PACKAGE_unshare is not set
 # CONFIG_PACKAGE_usb-modeswitch is not set
