--- a/feeds/luci-lorawan-gateway/luci-app-gateway/Makefile
+++ b/feeds/luci-lorawan-gateway/luci-app-gateway/Makefile
@@ -1,11 +1,12 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=Gateway base
-LUCI_DEPENDS:=+luci-base
+LUCI_DEPENDS:=+luci-base +luci-theme-bootstrap
 PKG_MAINTAINER:= Ruiqian Tang <ruiqian.tang@seeed.cc>
 PKG_LICENSE:=Apache-2.0
 PKG_VERSION:=1.0
 PKG_RELEASE:=1
+PKG_FLAGS:=nonshared
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
