feat: Added host restart and shutdown functionality..

--- a/feeds/luci-lorawan-gateway/luci-app-gateway/root/usr/share/rpcd/acl.d/luci-app-gateway.json
+++ b/feeds/luci-lorawan-gateway/luci-app-gateway/root/usr/share/rpcd/acl.d/luci-app-gateway.json
@@ -5,6 +5,10 @@
             "ubus": {
                 "uci": [
                     "get"
+                ],
+                "sensecap": [
+                    "reboot_host",
+                    "shutdown_host"
                 ]
             }
         },
@@ -13,6 +17,10 @@
                 "uci": [
                     "set",
                     "commit"
+                ],
+                "sensecap": [
+                    "reboot_host",
+                    "shutdown_host"
                 ]
             }
         }
