fix: clear device option in lora.config

--- a/feeds/lorawan-gateway/lora/files/etc/config/lora.config
+++ b/feeds/lorawan-gateway/lora/files/etc/config/lora.config
@@ -1,6 +1,6 @@
 config radio 'radio'
         option eui ''
-        option device 'US915'
+        option device ''
         option region 'US915'
         option freq_plan 'us915_1'
         option channel_plan 'US_902_928_FSB_2'
