--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,6 +102,9 @@ jobs:
           echo "Build Date: $(date '+%Y-%m-%d %H:%M:%S')" >> version.txt
           mkdir openwrt-armsr-armv8-generic-rootfs && cd openwrt-armsr-armv8-generic-rootfs
           tar -xzf ../openwrt-armsr-armv8-generic-rootfs.tar.gz && cp ../version.txt ./
+          mkdir -p opt/packages
+          cp ../../../packages/aarch64_generic/lorawan_gateway/*.ipk opt/packages/ || true
+          cp ../../../packages/aarch64_generic/luci_lorawan_gateway/*.ipk opt/packages/ || true
           tar -czf ../openwrt-armsr-armv8-generic-rootfs.tar.gz *
           tar -tzf ../openwrt-armsr-armv8-generic-rootfs.tar.gz | grep version.txt
           
