--- a/feeds/lorawan-gateway/lora/files/etc/config/lora.config
+++ b/feeds/lorawan-gateway/lora/files/etc/config/lora.config
@@ -1,9 +1,9 @@
 config radio 'radio'
         option eui ''
         option device ''
-        option region 'US915'
-        option freq_plan 'us915_1'
-        option channel_plan 'US_902_928_FSB_2'
+        option region ''
+        option freq_plan ''
+        option channel_plan ''
         option enabled '0'
         option platform 'chirpstack'
 
