--- a/.config
+++ b/.config
@@ -5078,6 +5078,7 @@ CONFIG_PACKAGE_luci-app-ups=y
 # 4. Themes
 #
 # CONFIG_PACKAGE_luci-theme-argon is not set
+CONFIG_PACKAGE_luci-theme-argon-copy=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-openwrt is not set
